--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "node": "^13.3.0",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-gesture-handler": "^1.5.2",
+    "react-navigation": "^4.0.10",
+    "react-navigation-stack": "^1.10.3",
     "watchman": "^1.0.0"
   },
   "devDependencies": {
